k8s/tls-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: two-tier

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flaskapp-ingress
  namespace: two-tier
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts: 
    - flask-app.com
    secretName: selfsigned-cert-tls
  rules:
  - host: flask-app.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: flaskapp-svc
          servicePort: 80
        
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskapp-depl
  namespace: two-tier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app-ctr1
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: flaskapp-svc
  namespace: two-tier
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: flask-app
