k8s/two-tier-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: two-tier-app
  namespace: default
  labels:
    app: two-tier-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: two-tier-app
  template:
    metadata:
      labels:
        app: two-tier-app
    spec:
      containers:
        - name: flask-app-ctr
          image: syedshah642/app-flask:latest
          ports:
            - containerPort: 5000
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: two-tier-app-service
  namespace: default
spec:
  selector:
    app: two-tier-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30004
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app-ingress
  namespace: default
spec:
  rules:
      - http:
          paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: two-tier-app-service
                port:
                  number: 30004
